# springboot-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  springboot.bzl
src/main/java/sample/: Application.java
